# thalia-t24

./: .gitignore  Cargo.toml  README.md
assets/: coa.csv
migrations/: 20250913020109_user_table.sql  20250913023152_chart_of_account_table.sql  20250913025111_user_account_table.sql  20250913032024_journal_entry_table.sql  20250913033045_journal_line_table.sql  20250913033147_user_account_balances_table.sql  20250914201539_activate_tokens_table.sql  20250917023706_transaction_idempotency_table.sql  20250919023559_account_class_table.sql  20250919023559_account_type_table.sql  20250921033633_account_balance_table.sql  20251109234735_extend_activate_token_size.sql
scripts/: init_db.sh  init_dragonfly.sh
src/: config.rs  index.rs  lib.rs  main.rs  openapi_docs.rs  startup.rs
src/account/: docs.rs  models.rs  repo.rs  routes.rs  schemas.rs  service.rs
src/admin/: docs.rs  mod.rs  models.rs  repo.rs  routes.rs  schemas.rs  service.rs
src/authentication/: auth.rs  credential.rs  middleware.rs  mod.rs  repo.rs  schemas.rs  service.rs  session_state.rs  util.rs
src/authentication/token/: activate.rs  extractor.rs  jwt.rs  mod.rs
src/base/: email.rs  error.rs  ids.rs  mod.rs  name.rs  password.rs  response.rs  schemas.rs  username.rs
src/config/: mod.rs  runtime.rs  state.rs
src/customer/: docs.rs  mod.rs  routes.rs  service.rs
src/infra/: aws.rs  mod.rs  pgdb.rs  redis.rs
src/ledger/: docs.rs  mod.rs  models.rs  repo.rs  routes.rs  schemas.rs  service.rs
src/notification/: email_client.rs  mod.rs  schemas.rs
src/staff/: docs.rs  models.rs  repo.rs  routes.rs  service.rs
src/telemetry/: mod.rs
src/transaction/: docs.rs  mod.rs  models.rs  repo.rs  routes.rs  schemas.rs  service.rs  util.rs
src/user/: mod.rs  models.rs  repo.rs  schemas.rs  service.rs
templates/: welcome_email.html  welcome_email.txt
tests/api/: account_check.rs  account_tests.rs  coa_check.rs  coa_tests.rs  health_check.rs  health_tests.rs  main.rs  signup_check.rs  signup_tests.rs  transaction_tests.rs
tests/api/base/: account_type.rs  invalid_user.rs  mod.rs  test_user.rs
tests/api/login_check/: customer.rs  staff.rs
tests/api/login_tests/: customer.rs  mod.rs  staff.rs
tests/proptest-regressions/: signup_check.txt
