[package]
name = "thalia"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "thalia"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
error-stack = { version = "0.6.0", features = ["spantrace", "serde", "anyhow"] }
tracing-actix-web = "0.7.19"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
envconfig = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing-log = "0.2"
tracing = { version = "0.1.41", features = ["log"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
