[package]
name = "thalia"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "thalia"

[dependencies]
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.11.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.14.0"
aws-config = "1.8.7"
aws-sdk-s3 = "1.107.0"
aws-types = "1.3.8"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
envconfig = "0.11.0"
getset = "0.1.6"
isocountry = "0.3.2"
iso_currency = { version = "0.5.3", features = [
    "with-serde",
    "with-sqlx-postgres",
] }
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
openid = "0.18.3"
rand = { version = "0.9.2", features = ["std_rng"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"


serde_json = "1.0.145"
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }


[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dev-dependencies]
claims = "0.8.0"
csv = "1.3.1"
fake = { version = "4.4.0", features = ["chrono", "chrono-tz"] }
once_cell = "1.21.3"
proptest = "1.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
r2d2 = "0.8.10"
redis = { version = "0.32.6", features = ["r2d2"] }
wiremock = "0.6.5"
